# pip-boardnote

./: .gitignore  AGENTS.md  LICENSE  README.md  design.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: click-through.ts  color-alpha-picker.ts  format-selector.ts  opacity-control.ts  orientation-preview.ts  status-bar.ts  theme-manager.ts  toolbar-toggle.ts  toolbar.ts
src/lib/: canvas-engine.ts  drag.ts  exporter.ts  format-adjuster.ts  image-manager.ts  importer.ts  input-handler.ts  mode-manager.ts  paper-formats.ts  storage.ts  stroke-manager.ts  stroke-smoother.ts  zoom.ts
src/styles/: canvas.css  main.css  theme.css  toolbar.css
src/types/: strokes.d.ts
