[package]
name = "pip-boardnote"
version = "0.1.0"
description = "Picture-in-Picture BoardNote - Cuaderno de notas transparente portable"
authors = [""]
edition = "2021"

[lib]
name = "pip_boardnote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
